# vulkan-cmake-boilerplate

./: CMakeLists.txt  README.md  setup.sh
src/: main.cpp
